...
        }
    }
}

enum class Screen(val title: String, val tech: String) {
    HOME("measure", ""),
    NATIVE_ANDROID("Native Android", "Kotlin + Jetpack Compose"),
    CMP("Compose Multiplatform", "KMP + CMP"),
    FLUTTER("Flutter", "Dart + Flutter Engine"),
    REACT_NATIVE("React Native", "JavaScript + RN Bridge"),
}

@OptIn(ExperimentalMaterial3Api::class)
...
