...
                    val attributes = AttributesBuilder().put("retry_count", 3).build()
                    Measure.log(body, severity, attributes)
                    Toast.makeText(context, "Log sent", Toast.LENGTH_SHORT).show()
                },
                modifier = Modifier.fillMaxWidth(),
            ) {
                Text("Track Log Manually")
            }
            OutlinedButton(
                onClick = {
                    val tag = "NativeAndroid"
                    val logcatBody = "logcat log from android native"
                    when (severity) {
...
