...
  [PillType.SessionEventFatalError]: { label: "Fatal Error", ...sessionRed },
  [PillType.SessionEventUnhandledError]: {
    label: "Unhandled Error",
    ...sessionAmber,
  },
  [PillType.SessionEventHandledError]: {
    label: "Handled Error",
    ...sessionYellow,
  },
  [PillType.SessionEventError]: { label: "Error", ...sessionRed },
  [PillType.SessionEventAnr]: { label: "ANR", ...sessionRed },
  [PillType.SessionEventAppHang]: { label: "App Hang", ...sessionRed },
  [PillType.SessionEventBugReport]: { label: "Bug Report", ...sessionRed },
...
