appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: "Native Android"
    timeout: 5000
- tapOn: "Native Android"
- scrollUntilVisible:
    element:
      text: "Launch Bug Report"
- tapOn: "Launch Bug Report"
- tapOn: "Briefly describe the issue you are facing"
- inputText: "e2e-bug-report"
- hideKeyboard
- tapOn: "Add more images"
- tapOn:
    text: "Photo taken on.*"
    index: 0
- tapOn:
    text: "Done"
    optional: true
- tapOn: "Send"

- pressKey: "Home"
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible:
      text: "__upload_settle__"
    timeout: 5000
    optional: true
